[package]
autobins = false
edition.workspace = true
name = "workspaces-tests"
publish = false
version = "0.1.0"

[[bin]]
name = "basic_adder"

[[bin]]
name = "counter_multisig"

[[bin]]
name = "cross_target"

[[bin]]
name = "escrow"

[[bin]]
name = "fungible_token"

[[bin]]
name = "fungible_token_receiver"

[[bin]]
name = "native_multisig"

[[bin]]
name = "non_fungible_token_full"

[[bin]]
name = "non_fungible_token_nep171"

[[bin]]
name = "non_fungible_token_receiver"

[[bin]]
name = "rbac"

[[bin]]
name = "simple_multisig"

[[bin]]
name = "storage_fee"

[[bin]]
name = "upgrade_bad"

[[bin]]
name = "upgrade_new"

[[bin]]
name = "upgrade_old_borsh"

[[bin]]
name = "upgrade_old_jsonbase64"

[[bin]]
name = "upgrade_old_multisig"

[[bin]]
name = "upgrade_old_raw"

[lints.clippy]
# pedantic = "warn"
new-without-default = "allow"
# must-use-candidate = "allow"
# missing-panics-doc = "allow"

[dependencies]
near-sdk.workspace = true
near-sdk-contract-tools = { path = "../", default-features = false, features = [
    "unstable",
] }
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true

[dev-dependencies]
near-crypto.workspace = true
tokio.workspace = true
pretty_assertions.workspace = true
near-workspaces = { workspace = true, features = ["unstable"] }
workspaces-tests-utils = { path = "../workspaces-tests-utils", default-features = false, features = [
    "unstable",
] }

[features]
unstable = ["near-sdk/unstable"]
